- optimizing plp.dart exploiting ProductViewModel; - menu changes; - providers subs in providers.dart; - cart side widget added; - user form side widget added; - custom button and custom textfield added; - UserViewModel updated; - User model updated; - new app bar added; - CartViewModel updated; - user avatar in the top-right side added;

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   intl: ^0.18.0
   flutter_svg: ^1.1.6
   flutter_layout_grid: ^2.0.1
+  image_picker: ^0.8.6 
+  lottie: ^2.0.0
+
     
 
 
@@ -116,4 +119,6 @@ flutter:
           style: italic
         - asset: assets/fonts/Raleway-Medium.ttf
           weight: 700
+        - asset: assets/fonts/Raleway-Bold.ttf
+          weight: 900
 
